--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,16 @@
   "name": "Auriga Extension for Chrome",
   "description": "This extension shows contextual actions",
   "version": "1.0",
-
-  "browser_action": {
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
+  "page_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
   "permissions": [
+    "declarativeContent",
     "activeTab",
     "https://ajax.googleapis.com/"
   ]
