--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "description": "This extension shows contextual actions",
   "version": "1.0",
   "background": {
-    "scripts": ["background.js"],
+    "scripts": ["background2.js"],
     "persistent": false
   },
   "page_action": {
@@ -15,6 +15,7 @@
   "permissions": [
     "declarativeContent",
     "activeTab",
-    "http://localhost:8080/"
+    "tabs",
+    "http://c7n6yx1:8080/"
   ]
 }
